Slight spacing issues.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
 .dashboard-content {
   margin: 4px;
   padding: 4px;
-  height: 40vh;
+  min-height: 300px;
   background: rgb(120,255,255);
   display: flex;
   flex-direction: column;
